# respostas-desafios-academia-esp32

1-Desafio/desafio1_publisher/: CMakeCache.txt  CMakeLists.txt  sdkconfig.old
1-Desafio/desafio1_publisher/main/: desafio1.c
1-Desafio/desafio1_subscriber/: CMakeCache.txt  sdkconfig
1-Desafio/desafio1_subscriber/main/: CMakeLists.txt  desafio1.c
2-Desafio/: CMakeCache.txt  CMakeLists.txt  partitions.csv  sdkconfig.old
2-Desafio/components/alarm_audio_manager/: CMakeLists.txt  alarm_audio_manager.c
2-Desafio/components/alarm_manager/: CMakeLists.txt  alarm_manager.c
2-Desafio/components/button_manager/: CMakeLists.txt  button_hal.c  button_manager.c
2-Desafio/components/buttons/: CMakeLists.txt  buttons.c
2-Desafio/components/buzzer/: CMakeLists.txt  buzzer.c
2-Desafio/components/buzzer_manager/: CMakeLists.txt  buzzer_hal.c  buzzer_manager.c
2-Desafio/components/display_manager/: CMakeLists.txt  display_manager.c
2-Desafio/components/led_rgb/: CMakeLists.txt  led_rgb.c
2-Desafio/components/ntp_manager/: CMakeLists.txt  ntp_manager.c
2-Desafio/components/nvs_storage/: nvs_storage.c
2-Desafio/components/web_server/: CMakeLists.txt  web_server.c
2-Desafio/components/wifi_manager/: CMakeLists.txt  wifi_manager.c
2-Desafio/main/: CMakeLists.txt  idf_component.yml  main.c
2-Desafio/spiffs/: alarm_manager.html
3-Desafio/gateway/: CMakeLists.txt
3-Desafio/gateway/main/: CMakeLists.txt  gateway.c
3-Desafio/node_button/: CMakeLists.txt  sdkconfig
3-Desafio/node_button/main/: main.c  (+1 more)
3-Desafio/node_relay/: CMakeLists.txt  sdkconfig.old
(+32 files in other folders)
